--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <target.jdk>1.7</target.jdk>
         <compiler.source.jdk>${target.jdk}</compiler.source.jdk>
         <compiler.target.jdk>${target.jdk}</compiler.target.jdk>
+        <!-- spring version -->
+        <spring.version>3.2.3.RELEASE</spring.version>
         <!-- junit -->
         <junit-version>4.11</junit-version>
         <!-- slf4j-log4j -->
@@ -22,6 +24,12 @@
     </properties>
 
     <dependencies>
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <!-- servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
