--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,13 +6,17 @@
     <display-name>Hello Web Application</display-name>
 
     <servlet>
-        <servlet-name>App Servlet</servlet-name>
-        <servlet-class>com.tsystems.demo.App</servlet-class>
+        <servlet-name>spring-web</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>App Servlet</servlet-name>
-        <url-pattern>/app</url-pattern>
+        <servlet-name>spring-web</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
-
 </web-app>
